--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
